[package]
name = "uniswap-mcp-server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "io-std"] }
